--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Capsaicin./title>
+    <title>Capsaicin</title>
   </head>
   <body>
     <noscript>You have no IP</noscript>
